apply plugin: "java"
apply plugin: "maven-publish"
apply plugin: 'signing'

group = 'com.github.banana-j'
version = '0.7-SNAPSHOT'

description = 'A simple MailChimp API wrapper written in Java'

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
    maven { url "https://repo.maven.apache.org/maven2" }
}

dependencies {
    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
    implementation group: 'net.sourceforge.jexcelapi', name: 'jxl', version: '2.6.12'
    implementation group: 'org.json', name: 'json', version: '20200518'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'

    testImplementation 'junit:junit:4.13'
}

task javadocJar(type: Jar) {
    classifier = 'javadoc'
    from javadoc
}

task sourcesJar(type: Jar) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

task fatJar(type: Jar) {
    archiveBaseName = 'bananaj'
    classifier = "fat"
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            artifact javadocJar
            artifact sourcesJar

            pom {
                name = 'bananaj'
                description = 'A simple MailChimp API wrapper written in Java'
                url = 'https://github.com/banana-j/bananaj'
                licenses {
                    license {
                        name = 'MIT'
                        url = 'https://raw.githubusercontent.com/banana-j/bananaj/master/LICENSE.md'
                    }
                }
                developers {
                    developer {
                        name = 'Alexander Weiß'
                        email = 'https://www.github.com/alexanderwe'
                    }
                    developer {
                        name = 'Gary Scriver'
                        email = 'https://www.github.com/gscriver'
                    }
                }
                scm {
                    connection = 'scm:git:ssh://git@github.com:banana-j/bananaj.git'
                    developerConnection = 'scm:git:ssh://git@github.com:banana-j/bananaj.git'
                    url = 'https://github.com/banana-j/bananaj'
                }
                issueManagement {
                    url = 'https://github.com/banana-j/bananaj/issues'
                    system = 'GitHub'
                }
            }
        }
    }
    repositories {
        maven {
            url 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
            credentials {
                username ossrhUsername
                password ossrhPassword
            }
        }
    }
}

signing {
    sign publishing.publications.mavenJava
}

